# llm_fIstudio_mcp_rag_midi_Improvisation_program

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile.gateway  Dockerfile.midi  Dockerfile.rag  FL_STUDIO_INSTALLATION_GUIDE.md  Makefile  README.md  auto_midi_monitor.py  c_chord_simulation.py  chord_recognition_test.py  controller.py  device_test.py  docker-compose.yml  extended_midi_test.py  improvisation_controller.py  improvisation_engine.py  learned.md  live_midi_monitor.py  main.py  midi_detector.py  midi_input_monitor.py  midi_knowledge_base.pkl  midi_rag_system.py  midi_web_monitor.py  pyproject.toml  quick_chord_test.py  realtime_improvisation_system.py  requirements.txt  simple_midi_test.py  test.py  test_rag_solo.py  trigger.py  workflow_simulator.py  클로드채팅로그.md 
coding-test-problems/: README.md  study-plan.md
ecommerce_api/: .gitignore  Dockerfile  docker-compose.yml  requirements.txt
fastapi-kafka-redis-tutorial/: .env  (+11 more)
my_backend_study/: .env  main.py  pyproject.toml  requirements.txt  simple_app.db  start_server.sh  step2_clonecodeing.py  step2_main.py  최소 구현 main.py
my_backend_study/app/: clone_database.py  clone_model.py  config.py  controller.py  database.py  main.py  model.py  repository.py  schemas.py  service.py  simple_app.db
my_backend_study/app/learn/: c_config.py  c_controller.py  c_database.py  c_main.py  c_models.py  c_repository.py  c_schmas.py  c_service.py
my_backend_study/app/practice/: clone_config.py  clone_controller.py  clone_main.py  clone_model.py  clone_repository.py  clone_schemas.py  clone_service.py
(+102 files in other folders)
