[project]
name = "llm-fistudio-mcp-rag-midi-improvisation-program"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.14.0",
    "mido>=1.3.3",
    "music21>=9.7.1",
    "numpy>=2.2.6",
    "pretty-midi>=0.2.10",
    "python-rtmidi>=1.5.8",
    "scikit-learn>=1.7.2",
    "setuptools>=80.9.0",
]
